change link list to unordered list

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <p><a href="recipes/chickenadobo.html">Chicken adobo</a></p>
-        <p><a href="recipes/grilledsalmon.html">Marinated & grilled salmon</a></p>
-        <p><a href="recipes/sausageredwinerisotto.html">Sausage & red wine risotto</a></p>
+        <ul>
+        <li><a href="recipes/chickenadobo.html">Chicken adobo</a></li>
+        <li><a href="recipes/grilledsalmon.html">Marinated & grilled salmon</a></li>
+        <li><a href="recipes/sausageredwinerisotto.html">Sausage & red wine risotto</a></li>
+        </ul>
     </body>
 </html>
