add css styling to index and recipe pages

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title>Recipe Website Project</title>
+        <link rel="stylesheet" href="indexstyle.css">
     </head>
-    <body>
-        <h1>Odin Recipes</h1>
+    <body class="body">
+        <h1 class="header">Odin Recipes</h1>
         <ul>
-        <li><a href="recipes/chickenadobo.html">Chicken adobo</a></li>
-        <li><a href="recipes/grilledsalmon.html">Marinated & grilled salmon</a></li>
-        <li><a href="recipes/sausageredwinerisotto.html">Sausage & red wine risotto</a></li>
+        <li><a class="recipe" id="chicken" href="recipes/chickenadobo.html">Chicken adobo</a></li>
+        <li><a class="recipe" id="salmon" href="recipes/grilledsalmon.html">Marinated & grilled salmon</a></a></li>
+        <li><a class="recipe" id="sausage" href="recipes/sausageredwinerisotto.html">Sausage & red wine risotto</a></li>
         </ul>
     </body>
 </html>
