--- a/recipes/chickenadobo.html
+++ b/recipes/chickenadobo.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>Recipe Website Project</title>
+        <link rel="stylesheet" href="../css-styles/adobo.css">
     </head>
-    <body>
+    <body class="body">
     <h1>Chicken Adobo</h1>
     <img src="./../images/chicken_adobo.png" width="400" height="500">
-    <p><h2>Much <em>Adobo...</em> Chicken?</h2></p>
+    <p><h2>Much <em>adobo...</em> chicken?</h2></p>
     <p>There's very little about this dish to do with Shakespeare, despite the misleading title.</p>
     <p>Truthfully, it has <em>nothing at all</em> in common with the Elizabethan playwright. I simply couldn't resist such a <em>fowl</em> joke, and I'm no <em>chicken</em> when it comes to my puns.</p>
     <p>Get it? Much ado about no- <em>anyway.</em></p>
@@ -16,17 +17,17 @@
     <p>Follow this simple recipe if you want to sample one of the best dishes in the world!</p>
     <p><h2>What you need</h2></p>
     <ul>
-        <li><strong>boneless skinless chicken thighs</strong> - can't be substituted with other cuts, you need the fat to thicken the sauce into a glaze;</li>
-        <li><strong>soy sauce</strong> - all-purpose or light soy. <strong><em>not</em></strong> dark soy (bottle will be labelled as such if it's dark soy sauce);</li>
-        <li><strong>white vinegar</strong> - everyday, plain white vinegar.Sub with any clear vinegar, inc. rice win, apple cider, or sherry vinegar;</li>
-        <li><strong>onion & garlic</strong> - for those essential umami undertones;</li>
-        <li><strong>peppercorns</strong> - whole, or coarse cracked pepper;</li>
-        <li><strong>sugar</strong> - brown is best, white is a good 2nd;</li>
-        <li><strong>bay leaves</strong> - fresh or dried, not the end of the world if missing;</li>
-        <li><strong>green onion & sesame seeds</strong> - optional garnish. Toast sesame seeds for extra flavour</li>
+        <li><strong>boneless skinless chicken thighs</strong>: <div class="subtext">can't be substituted with other cuts, you need the fat to thicken the sauce into a glaze;</div></li>
+        <li><strong>soy sauce</strong>: <div class="subtext">all-purpose or light soy. <strong><em>not</em></strong> dark soy (bottle will be labelled as such if it's dark soy sauce);</div></li>
+        <li><strong>white vinegar</strong>: <div class="subtext">everyday, plain white vinegar.Sub with any clear vinegar, inc. rice win, apple cider, or sherry vinegar;</div></li>
+        <li><strong>onion & garlic</strong>: <div class="subtext">for those essential umami undertones;</div></li>
+        <li><strong>peppercorns</strong>: <div class="subtext">whole, or coarse cracked pepper;</div></li>
+        <li><strong>sugar</strong>: <div class="subtext">brown is best, white is a good 2nd;</div></li>
+        <li><strong>bay leaves</strong>: <div class="subtext">fresh or dried, not the end of the world if missing;</div></li>
+        <li><strong>green onion & sesame seeds</strong>: <div class="subtext">optional garnish. Toast sesame seeds for extra flavour</div></li>
     </ul>
     <p><h2>Ingredients</h2></p>
-    <p><h3>Chicken and Marinade</h3></p>
+    <p><h3>Chicken and marinade</h3></p>
     <ul>
         <li>750g/1.5lb chicken thighs fillets<em>, boneless and skinless (5 - 6 pieces)</em></li>
         <li>3 garlic cloves<em>, minced</em></li>
@@ -34,7 +35,7 @@
         <li>85ml + 2tbsp white vinegar</li>
         <li>4 fresh bay leaves (3 dried)</li>
     </ul>
-    <p><h3>For Cooking</h3></p>
+    <p><h3>For cooking</h3></p>
     <ul>
         <li>2 tbsp oil<em>, separated (vegetable, canola, or peanut)</em></li>
         <li>3 garlic cloves<em>, minced</em></li>
