--- a/recipes/grilledsalmon.html
+++ b/recipes/grilledsalmon.html
@@ -3,27 +3,28 @@
     <head>
         <meta charset="utf-8">
         <title>Grilled Salmon page</title>
+        <link rel="stylesheet" href="../css-styles/salmon.css">
     </head>
-    <body>
+    <body class="body">
         <h1>Marinated & Grilled Salmon</h1>
         <img src="./../images/grilledsalmon.png" width="400" length="500"> 
 
-        <p><h2>Flavour Party</h2></p>
+        <p><h2>Flavour party</h2></p>
             Sticky, with citrus notes and a chilli kick. 
             <p>This easy grilled salmon is gorgeous and juicy on the inside, dark and sticky on the outside. A perfect dish of contrasting, extravagant flavours, perfect for late summer dinners in the garden or sharing with friends. </p>
 
         <p><h2>Ingredients</h2></p>
             <ul>
-                <li>2 sticks of fresh lemongrass<em>, slightly bashed to release flavours</em></li>
-                <li>1 bunch of fresh coriander (30g)<em>, picked and roughly chopped</em></li>
-                <li>5cm piece of fresh ginger<em>, peeled and grated</em></li>
-                <li>4 cloves of garlic<em>, grated</em></li>
-                <li>1/2 small bottle of low-salt, dark soy sauce</li>
-                <li>1 large salmon fillet, (about 1kg)</li>
+                <li>2 sticks of fresh lemongrass<em>: <div class="subtext">slightly bashed to release flavours</div></em></li>
+                <li>1 bunch of fresh coriander (30g)<em>: <div class="subtext">picked and roughly chopped</div></em></li>
+                <li>5cm piece of fresh ginger<em>: <div class="subtext">peeled and grated</div></em></li>
+                <li>4 cloves of garlic<em>: <div class="subtext">grated</div></em></li>
+                <li>1/2 small bottle of low-salt: <div class="subtext">dark soy sauce</div></li>
+                <li>1 large salmon fillet: <div class="subtext">(about 1kg)</div></li>
                 <li>4 tbsp runny honey</li>
-                <li>2 red chillies<em>, de-seeded and sliced</em></li>
-                <li> 4 spring onions<em>, finely sliced</em></li>
-                <li>2 limes<em>, halved</em></li>
+                <li>2 red chillies<em>: <div class="subtext">de-seeded and sliced</div></em></li>
+                <li> 4 spring onions<em>: <div class="subtext">finely sliced</div></em></li>
+                <li>2 limes<em>: <div class="subtext">halved</div></em></li>
 
             </ul>
         <p><h2>Instructions</h2></p>
