--- a/recipes/sausageredwinerisotto.html
+++ b/recipes/sausageredwinerisotto.html
@@ -3,19 +3,20 @@
     <head>
         <meta charset="utf-8">
         <title>Sausage and red wine risotto</title>
+        <link rel="stylesheet" href="../css-styles/sausage.css">
     </head>
-    <body>
+    <body class="body">
         <h1>Sausage & Red Wine Risotto</h1>
         <img src="./../images/sausredwinerisot.png" width="400" height="500">
         <p><h2>Rice, rice, baby</h2></p>
         <p>Both comforting and luxurious, using a decent, drinking Barolo in this beautiful ruby risotto not only adds a lovely pink hue, but boldly brings the sweetness of the veg and the salty umami of the sausage together. With Parmesan, bombs of fontina and crunchy hazelnuts in the mix, it's an undeniably satisfying bowlful. </p>
         <p><h2>What you'll need</h2></p>
         <ul>
-            <li><strong>fresh thyme</strong> - preferably fresh, but dried will work in a pinch;</li>
-            <li><strong>sausages</strong> - good quality sausages as this is the main protein of the dish;</li>
-            <li><strong>Arborio rice</strong> - can be substituted for similar risotto rice, or a paella rice. <strong><em>not</em></strong> Basmati or long grain, you need the starch from Arborio to achieve risottos signature creaminess;</li>
-            <li><strong>Barolo wine</strong> - recommended, not vital. Can be substituted with any other good quality red. Never cook with wine you aren't willing to drink;</li>
-            <li><strong>fontina</strong> - for melting bombs throughout your meal. If you can't find fontina, can be substituted with another semi-soft cheese like gruyere.</li>
+            <li><strong>fresh thyme</strong>: <div class="subtext">preferably fresh, but dried will work in a pinch;</div></li>
+            <li><strong>sausages</strong>: <div class="subtext">good quality sausages as this is the main protein of the dish;</div></li>
+            <li><strong>Arborio rice</strong>: <div class="subtext">can be substituted for similar risotto rice, or a paella rice. <strong><em>not</em></strong> Basmati or long grain, you need the starch from Arborio to achieve risottos signature creaminess;</div></li>
+            <li><strong>Barolo wine</strong>: <div class="subtext">recommended, not vital. Can be substituted with any other good quality red. Never cook with wine you aren't willing to drink;</div></li>
+            <li><strong>fontina</strong>: <div class="subtext">for melting bombs throughout your meal. If you can't find fontina, can be substituted with another semi-soft cheese like gruyere.</div></li>
         </ul>
         <h2>Ingredients</h2>
         <ul>
