add 'button-container' class and matching CSS

--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta content="width=device-width, initial-scale=1.0">
         <title>Recipe Website Project</title>
         <link rel="stylesheet" href="indexstyle.css">
     </head>
     <body class="body">
         <h1 class="header">Odin Recipes</h1>
         <ul>
-        <li><a class="recipe" id="chicken" href="recipes/chickenadobo.html">Chicken adobo</a></li>
-        <li><a class="recipe" id="salmon" href="recipes/grilledsalmon.html">Marinated & grilled salmon</a></a></li>
-        <li><a class="recipe" id="sausage" href="recipes/sausageredwinerisotto.html">Sausage & red wine risotto</a></li>
+            <li><a class="recipe" class="button-container" id="salmon" href="recipes/grilledsalmon.html"><button>Marinated & grilled salmon</button></a></a></li>
+            <li><a class="recipe" class="button-container" id="sausage" href="recipes/sausageredwinerisotto.html"><button>Sausage & red wine risotto</button></a></li>
+            <li><a class="recipe" class="button-container" id="chicken" href="recipes/chickenadobo.html"><button>chicken adobo</button></a></li>
         </ul>
     </body>
 </html>
